HND-28 Creates login and register API and before_action authenticate_request callback
